added chat box full size, writing and pushing enter on new message with chatbot, local storage on previous messages

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,3 +19,5 @@ SPRING_PROFILES_ACTIVE=docker
 
 # Frontend (Next.js) - public environment variables must be prefixed with NEXT_PUBLIC_
 NEXT_PUBLIC_API_URL=http://localhost:8080/api
+BOOK_PDF_PATH=backend/books/book.pdf
+OPENAI_API_KEY=your_openai_api_key_here
