--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
+    "rehype-sanitize": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "5.3.3",
