--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
+    "@types/pdf-parse": "^1.1.5",
     "prisma": "^4.15.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
