Add GitHub Actions CI/CD pipeline for one-button Heroku deployment
✨ Features:
- Automatic deployment on push to main
- Manual deployment with GitHub Actions button
- Health checks and testing
- Selective deployment (backend/frontend/both)
- Deployment status reporting

🚀 Usage: Go to Actions tab → Manual Deploy → Run workflow

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:db}:${DB_PORT:5432}/${DB_NAME:bookdb}
+    url: ${DATABASE_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:bookdb}}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
@@ -19,7 +19,7 @@ spring:
     validate-on-migrate: true
 
 server:
-  port: ${APP_PORT:8080}
+  port: ${PORT:8080}
 
 logging:
   level:
