Fix GitHub Actions git branch issue: Explicitly create main branch
- Add 'git checkout -b main' before commit in deployment workflows
- Fix 'src refspec main does not match any' error
- Ensure fresh git repos have the correct branch name for Heroku push
- Both automatic and manual deploy workflows now create main branch explicitly
- Resolves deployment failures caused by missing branch reference

--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -128,6 +128,7 @@ jobs:
         git init
         git config user.email "action@github.com"
         git config user.name "GitHub Actions"
+        git checkout -b main
         git add .
         git commit -m "Deploy backend"
         
@@ -189,6 +190,7 @@ jobs:
         git init
         git config user.email "action@github.com"
         git config user.name "GitHub Actions"
+        git checkout -b main
         git add .
         git commit -m "Deploy frontend"
         
