--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,7 @@ jobs:
         git init
         git config user.email "action@github.com"
         git config user.name "GitHub Actions"
+        git checkout -b main
         git add .
         git commit -m "Deploy backend"
         
@@ -140,6 +141,7 @@ jobs:
         git init
         git config user.email "action@github.com"
         git config user.name "GitHub Actions"
+        git checkout -b main
         git add .
         git commit -m "Deploy frontend"
         
