--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -141,6 +141,7 @@ jobs:
         if [ ! -z "${{ secrets.OPENAI_API_KEY }}" ]; then
           heroku config:set OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" -a ai-story-book-backend
         fi
+        heroku config:set BOOK_PDF_PATH="books/napoleon-hill-think-and-grow-rich.pdf" -a ai-story-book-backend
 
     - name: ⏳ Wait for Backend to Start
       run: |
