--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,16 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0",
     "react-markdown": "^8.0.7",
+    "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^3.0.1",
-    "rehype-sanitize": "^5.0.1"
+    "supports-color": "^10.2.2",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
-    "@types/react": "18.2.21",
     "@types/node": "20.4.2",
-    "sass": "^1.70.0"
+    "@types/react": "18.2.21",
+    "sass": "^1.70.0",
+    "typescript": "5.3.3"
   }
 }
